<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="pref_subtitles_vertical_offset">Subtitle Vertical Offset</string>
    <string name="pref_subtitles_vertical_offset_summary">Adjust the vertical position of subtitles. Negative moves up, positive moves down.</string>
    <string name="pref_subtitles_vertical_offset_center">Center</string>
    <string name="media_image">Media image</string>
    <string name="profile_picture">Profile picture</string>
    <string name="app_name">RUNE</string>
    <string name="app_name_release" translatable="false" tools:ignore="UnusedResources">RUNE</string>
    <string name="app_name_debug" translatable="false" tools:ignore="UnusedResources">RUNE Debug</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="loading">Loading…</string>
    <string name="btn_cancel">Cancel</string>
    <string name="byletter_letters" translatable="false">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="pref_playback">Playback</string>
    <string name="pref_max_bitrate_title">Max streaming bitrate</string>
    <string name="settings_title">Settings</string>
    <string name="pref_authentication_cat">Authentication</string>
    <string name="chapters">Chapters</string>
    <string name="state_disabled">Disabled</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_Subtitles">Subtitles</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_masks">Masks</string>
    <string name="lbl_continue_watching">Continue watching</string>
    <string name="continue_listening">Continue listening</string>
    <string name="lbl_next_up">Next up</string>
    <string name="lbl_on_now">On now</string>
    <string name="lbl_views">Views</string>
    <string name="lbl_by_letter">By letter</string>
    <string name="lbl_suggested">Suggested</string>
    <string name="lbl_status">%1$s / %2$s</string>
    <string name="lbl_genres">Genres</string>
    <string name="lbl_filtered_by_genre">Filtered by genre: %1$s</string>
    <string name="genre_row_action_adventure">Action &amp; Adventure</string>
    <string name="show_action_adventure_row">Show Action &amp; Adventure row</string>
    <string name="genre_row_favorites">Favorites</string>
    <string name="show_favorites_row">Show Favorites row</string>
    <string name="show_my_collections_row">Show Collections row</string>
    <string name="show_suggested_for_you_row">Show Suggested Movies row</string>
    <string name="show_suggested_tv_shows_row">Show Suggested TV Shows row</string>
<string name="lbl_suggested_tv_shows">Suggested TV Shows</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_search_hint">Search for movies, shows, and more...</string>
    <string name="lbl_recent_searches">Recent searches</string>
    <string name="voice_search_not_available">Voice search not available</string>
    <string name="error_occurred">An error occurred. Please try again.</string>
    <string name="no_results_found">No results found</string>
    <string name="lbl_library">Refresh</string>
    <string name="lbl_voice_search">Voice Search</string>
    <string name="msg_not_implemented">" not implemented"</string>
    <string name="lbl_latest">Recently added</string>
    <string name="lbl_latest_in">Recently added in %s</string>
    <string name="lbl_by_name">By name</string>
    <string name="lbl_favorites">Favorites</string>
    <string name="lbl_coming_up">Coming up</string>
    <string name="lbl_favorite_channels">Favorite channels</string>
    <string name="lbl_other_channels">Other channels</string>
    <string name="lbl_collections">Collections</string>
    <string name="lbl_my_collections">Collections</string>
    <string name="lbl_movies">Movies</string>
    <string name="lbl_tv_series">TV series</string>
    <string name="lbl_other">Other</string>
    <string name="because_you_watched">Because you watched %1$s</string>
    <string name="lbl_play_all">Play all</string>
    <string name="lbl_shuffle_all">Shuffle all</string>
    <string name="lbl_Watched_History_Series">Watched Series</string>
    <string name="lbl_Watched_History_Movies">Watched Movies</string>
    <string name="lbl_Playlists">Playlists</string>
    <string name="lbl_play">Play</string>
    <string name="lbl_pause">Pause</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_cancel_recording">Cancel recording</string>
    <string name="lbl_cancel_series">Cancel series</string>
    <string name="lbl_record_series">Record series</string>
    <string name="lbl_record">Record</string>
    <string name="msg_set_to_record">Program set to record</string>
    <string name="msg_unable_to_create_recording">Unable to create recording</string>
    <string name="msg_recording_cancelled">Recording cancelled</string>
    <string name="msg_unable_to_cancel">Unable to cancel recording</string>
    <string name="lbl_cast_crew">Cast &amp; crew</string>
    <string name="lbl_additional_parts">Additional parts</string>
    <string name="lbl_chapters">Chapters</string>
    <string name="lbl_specials">Specials</string>
    <string name="lbl_trailers">Trailers</string>
    <string name="lbl_items">Items</string>
    <string name="lbl_item">Item</string>
    <string name="lbl_series">Series</string>
    <string name="lbl_seasons">Seasons</string>
    <string name="lbl_upcoming">Upcoming</string>
    <string name="lbl_favorite">Favorite</string>
    <string name="lbl_watched">Watched</string>
    <string name="lbl_sd">SD</string>
    <string name="lbl_runs">"Runs"</string>
    <string name="runtime_hours_minutes">%1$dh %2$dm</string>
    <string name="runtime_minutes">%1$dm</string>
    <string name="lbl_ends">"Ends"</string>
    <string name="lbl_directed_by">"Directed by"</string>
    <string name="lbl_last_played">"Last played "</string>
    <string name="lbl_runtime">Runtime</string>
    <string name="lbl_other_options">Other options</string>
    <string name="lbl_people">People</string>
    <string name="lbl_videos">Videos</string>
    <string name="lbl_recordings">Recordings</string>
    <string name="lbl_music_playlists">Music Playlists</string>
    <string name="lbl_none">None</string>
    <string name="msg_video_playback_error">"Video playback error - "</string>
    <string name="lbl_bracket_unknown">Unknown</string>
    <string name="lbl_trailer">"Trailer "</string>
    <string name="lbl_play_trailers">Play trailer(s)</string>
    <string name="lbl_play_external">Play in External Player</string>
    <string name="lbl_no">No</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_enter_server_address">Enter server address</string>
    <string name="lbl_valid_server_address">Please enter the server address (IP or domain/machine name)</string>
    <string name="lbl_ok">Ok</string>
    <string name="lbl_born">"Born "</string>
    <string name="lbl_loading_elipses">Loading…</string>
    <string name="msg_playback_not_allowed">Playback not allowed at this time</string>
    <string name="msg_playback_restricted">The administrator has restricted playback of this item at this time</string>
    <string name="msg_playback_incompatible">Cannot play this video format</string>
    <string name="lbl_never">Never</string>
    <string name="msg_cannot_play_time">Cannot play this item at this time</string>
    <string name="msg_cannot_play">This item cannot be played</string>
    <string name="lbl_no_items">No items</string>
    <string name="lbl_empty">Empty</string>
    <string name="lbl_tv_queuing">Play next episode automatically</string>
    <string name="lbl_playing">Playing</string>
    <string name="lbl_play_first_unwatched">Play first unwatched</string>
    <string name="lbl_mark_unplayed">Mark unplayed</string>
    <string name="lbl_mark_played">Mark played</string>
    <string name="lbl_remove_favorite">Remove favorite</string>
    <string name="lbl_add_favorite">Add favorite</string>
    <string name="lbl_now_playing_track">%1$s of %2$s</string>
    <string name="lbl_now_playing_album">from %1$s</string>
    <string name="msg_no_playable_items">No playable items</string>
    <string name="msg_external_player_error">Could not launch external player. Make sure you have a video player app installed.</string>
    <string name="lbl_unwatched">Unwatched</string>
    <string name="lbl_load_channels">"Load channels "</string>
    <string name="lbl_today">Today</string>
    <string name="lbl_tomorrow">Tomorrow</string>
    <string name="lbl_on">On </string>
    <string name="lbl_tune_to_channel">Tune to channel</string>
    <string name="msg_recording_now">Recording now</string>
    <string name="msg_will_record">Will record</string>
    <string name="lbl_begin_padding">Begin padding</string>
    <string name="lbl_program_ended">Program ended</string>
    <string name="lbl_end_padding">End padding</string>
    <string name="lbl_similar_items_library">Similar items in your library</string>
    <string name="lbl_record_any_channel">Record on any channel</string>
    <string name="lbl_record_any_time">Record at any time</string>
    <string name="lbl_only_new_episodes">Only new episodes</string>
    <string name="lbl_repeat_options">Repeat options</string>
    <string name="msg_cancel_entire_series">Are you sure you want to cancel this ENTIRE SERIES?</string>
    <string name="pref_audio_direct">Direct</string>
    <string name="pref_audio_compat">Downmix to stereo</string>
    <string name="pref_audio_night_mode">Audio night mode (experimental)</string>
    <string name="lbl_audio_output">Audio output</string>
    <string name="lbl_goto_series">Go to series</string>
    <string name="lbl_enable_debug">Debug options</string>
    <string name="desc_debug">Provide extra information for debugging</string>
    <string name="lbl_showing">Showing</string>
    <string name="genre_rows">Home Screen Genre Rows</string>
    <string name="android_channels">Android TV Channels</string>
    <string name="genre_rows_description">Enable 5 or less for better performance</string>
    <string name="lbl_all_items">All items</string>
    <string name="lbl_sorted_by">sorted by</string>
    <string name="lbl_from">from</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_date_added">Date added</string>
    <string name="lbl_premier_date">Premier date</string>
    <string name="lbl_production_year">Production year</string>
    <string name="lbl_critic_rating">Critic rating</string>
    <string name="lbl_community_rating">Community rating</string>
    <string name="lbl_rating">Rating</string>
    <string name="lbl_random">Random</string>
    <string name="lbl_starting_with">beginning with those whose name starts with</string>
    <string name="lbl_display_preferences">Display preferences</string>
    <string name="show_item_titles_on_focus">Show item info on top</string>
    <string name="no_user_warning">We couldn\'t find any accounts!\nAdd a new account by pressing the \"Add account\" button.</string>
    <string name="who_is_watching">Who\'s watching?</string>
    <string name="add_user">Add account</string>
    <string name="server_unsupported_notification">This server uses Jellyfin version %1$s which is unsupported. Please update to Jellyfin %2$s or newer to continue using the app.</string>
    <string name="fast_forward">Fast forward</string>
    <string name="rewind">Rewind</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="play_pause">Play/Pause</string>
    <string name="subtitles">Subtitles</string>
    <string name="audio">Audio</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="stats_title">Playback Information</string>
    <string name="video_title">Video</string>
    <string name="audio_title">Audio</string>
    <string name="playback_info_title">Playback</string>
</resources>