<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false">

    <TextView
        android:id="@+id/notification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="@color/red_gradient_end"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/server_unsupported_notification"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/title"
        style="@style/Widget.Jellyfin.Row.Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="#787272"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:lineSpacingExtra="8sp"
        android:text="@string/who_is_watching"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notification"
        app:layout_goneMarginTop="0dp" />

    <TextView
        android:id="@+id/no_users_warning"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:rotationX="-2"
        android:text="@string/no_user_warning"
        android:textColorLink="#FAFAFA"
        app:layout_constraintBottom_toTopOf="@+id/actions_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/users"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="invisible" />

    <org.jellyfin.androidtv.ui.ExpandableTextView
        android:id="@+id/login_disclaimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="3"
        android:padding="8dp"
        android:layout_marginTop="384dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="This is the login disclaimer." />

    <androidx.leanback.widget.HorizontalGridView
        android:id="@+id/users"
        android:layout_width="744dp"
        android:layout_height="92dp"
        android:layout_marginTop="136dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:gravity="center_horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowHeight="wrap_content"
        tools:itemCount="6"
        tools:listitem="@layout/view_circular_user_profile" />

    <LinearLayout
        android:id="@+id/actions_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="48dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/users">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_user_button"
            style="@style/Button.Default"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_margin="8dp"
            android:baselineAligned="false"
            android:drawableStart="@drawable/ic_user_add"
            android:text="@string/add_user"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="317dp" />

        <org.jellyfin.androidtv.ui.ServerButtonView
            android:id="@+id/server_button"
            android:layout_width="482dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:foreground="@drawable/button_default_ripple"
            android:padding="0dp"
            tools:ignore="TextSizeCheck">

        </org.jellyfin.androidtv.ui.ServerButtonView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
